Modification des classes span

--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -10,7 +10,7 @@
 
         <div class='container-fluid'>
             <div class='row'>
-                <div class='span2 sidebar mainsidebar' style="margin-left: -20px; padding-left: 20px; margin-top: 20px; padding-top: 40px;">
+                <div class='col-md-2 sidebar mainsidebar' style="margin-left: -20px; padding-left: 20px; margin-top: 20px; padding-top: 40px;">
                     <br>
                     <?php echo $this->avatar(Zend_Auth::getInstance()->getIdentity()['ID_UTILISATEUR'], 'medium', array('style' => "float: left; width: 50px; border: 1px solid #dfdfdf; border-radius: 50%; margin-right: 15px;")) ?>
 
@@ -24,7 +24,7 @@
                     <?php echo $this->placeholder('lateral_navigation'); ?>
                 </div>
 
-                <div class='span10' style="margin-top: 70px;">
+                <div class='col-md-10' style="margin-top: 70px;">
                   <?php echo $this->placeholder('page_header') ?>
                   <?php echo $this->render("includes/notifications.phtml"); ?>
 
@@ -36,15 +36,11 @@
                   <?php echo $this->placeholder('after_content') ?>
                 </div>
             </div>
-<<<<<<< HEAD
             <button id="go-top" type="button" class="btn hide" onclick="scrollToTop()">
                 <i class="icon-arrow-up"></i>
             </button>
-            <div class='row-fluid'>
-=======
             <div class='row'>
->>>>>>> bf5e9928 (Modification des classes row)
-                <div class="span12">
+                <div class="col-md-12">
                     <?php echo $this->render("includes/footer.phtml"); ?>
                 </div>
             </div>
