--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -447,7 +447,7 @@ $(document).ready(function() {
 		echo "
 			<div class='container-fluid'>
 			<div class='row'>
-				<div id='calendar' name='calendar' class='span9'>
+				<div id='calendar' name='calendar' class='col-md-9'>
 				</div>
 		";
 		echo "
@@ -458,7 +458,7 @@ $(document).ready(function() {
 			</span>
 		";
 		echo "
-				<div id='external-events' class='span3' style='margin-top:5px;color:black;border:1px solid black;text-align:center;border-radius:10px 10px;-moz-border-radius:10px 10px; -webkit-border-radius:10px 10px;'>
+				<div id='external-events' class='col-md-3' style='margin-top:5px;color:black;border:1px solid black;text-align:center;border-radius:10px 10px;-moz-border-radius:10px 10px; -webkit-border-radius:10px 10px;'>
 					<div style='' >
 		";
 
