--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -1,4 +1,4 @@
-<form class="form-horizontal span8" method="post">
+<form class="form-horizontal col-md-8" method="post">
     <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
 
     <input type='hidden' name='ID_DOSSIER' value='<?= $this->idDossier ?>' />
