--- a/application/views/scripts/dossier/liees-doss.phtml
+++ b/application/views/scripts/dossier/liees-doss.phtml
@@ -9,7 +9,7 @@
 		</div>
 	";
 	echo "
-		<div class='span12'>
+		<div class='col-md-12'>
 			<input type='hidden' name='idDossier' id='idDossier' value='".$this->idDossier."' />
 	";
 		foreach($this->listeEtab as $lib => $val){			
