--- a/application/views/scripts/dossier/prescription-edit.phtml
+++ b/application/views/scripts/dossier/prescription-edit.phtml
@@ -4,12 +4,12 @@
     <input type='hidden' name='action' id='action' value='<?= $this->action ?>' />
 
     <div class='row'>
-        <div class='span9' <?= $this->action == 'presc-add' ?  "style='display:none;'" : "" ?>>
+        <div class='col-md-9' <?= $this->action == 'presc-add' ?  "style='display:none;'" : "" ?>>
             <a class='btn btn-warning' id='del-prescription'>Supprimer la prescription</a>
             <a class='btn btn-danger' id='del-confirm' style='display:none;'>Confirmer la suppression</a>
             <a class='btn' id='del-cancel' style='display:none;'>Annuler</a>
         </div>
-        <div class='span3' style='float:right;'>
+        <div class='col-md-3' style='float:right;'>
             <a class='btn btn-default' href='/dossier/prescription/id/<?= $this->id_dossier ?>'>Annuler la modification</a>
             <input type='submit' class='btn btn-success' value='Sauvegarder'>
         </div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class='row'>
-        <div class='span'>
+        <div class='col'>
             Sélectionnez l'endroit dans lequel vous souhaitez ajouter cette prescription
             <select name='TYPE_PRESCRIPTION_DOSSIER' style='width:300px;'>
                 <option value='0' <?= $this->infosPrescription['TYPE_PRESCRIPTION_DOSSIER'] == 0 ? "selected" : "" ?>>Rappels réglementaires</option>
@@ -35,7 +35,7 @@
     </div>
 
     <div class='row'>
-        <div class='span4'>
+        <div class='col-md-4'>
             Texte
             <select style='width:80%;' id='LIBELLE_TEXTE' class='chosen'>
             <?php foreach ($this->listeTextes as $val): ?>
@@ -44,7 +44,7 @@
             </select>
         </div>
 
-        <div class='span4'>
+        <div class='col-md-4'>
             Article
             <select style='width:80%;' class='chosen' id='LIBELLE_ARTICLE'>
             <?php foreach ($this->listeArticles as $val): ?>
@@ -53,13 +53,13 @@
             </select>
         </div>
 
-        <div class='span4'>
+        <div class='col-md-4'>
             <a class='btn btn-default' id='addAssoc' href=''>Ajouter l'association</a>
         </div>
     </div>
 
     <div class='row'>
-        <div class='span12'>
+        <div class='col-md-12'>
             <table class='table table-condensed champs_icpe champs rubrique' id='association'>
                 <thead>
                     <tr>
@@ -84,23 +84,23 @@
     </div>
 
     <div class='row'>
-        <div class='span12'>
+        <div class='col-md-12'>
             Contenu :
             <textarea name='PRESCRIPTION_LIBELLE' id='PRESCRIPTION_LIBELLE' rows='10'><?= $this->infosPrescription['LIBELLE_PRESCRIPTION_DOSSIER'] ?></textarea>
         </div>
     </div>
 
     <div class='row'>
-        <div class='span3'>
+        <div class='col-md-3'>
             <label for="DATE_LEVEE">Date de levée</label>
             <input class='date' type='text' name='DATE_LEVEE' id='DATE_LEVEE' value="<?= $this->infosPrescription['DATE_LEVEE'] ?>" />
             &nbsp;
             <button type='button' class='today btn'>
-                <i class='icon-calendar'></i>
+                <i class='glyphicon glyphicon-calendar'></i>
                 &nbsp;Aujourd'hui
             </button>
         </div>
-        <div class='span9'>
+        <div class='col-md-9'>
             <label for="JUSTIFICATIF_LEVEE">Justification :</label>
             <textarea name='JUSTIFICATIF_LEVEE' id='JUSTIFICATIF_LEVEE' rows='10'><?= $this->infosPrescription['JUSTIFICATIF_LEVEE'] ?></textarea>
         </div>
