--- a/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
@@ -27,7 +27,7 @@
 		$i = 0;
 	    foreach($this->champs_descriptif_technique as $title => $champ_destech) {
 	    	$j = 0;
-	    	echo '<div class="span4">';
+	    	echo '<div class="col-md-4">';
 	        echo "<h5 class='lead'>".$title."</h5>";
 	        echo "<dl>";
 
