--- a/application/views/scripts/etablissement/index.phtml
+++ b/application/views/scripts/etablissement/index.phtml
@@ -7,7 +7,7 @@
 
     <div class='row'>
         <!-- Informations générales de l'établissement -->
-        <div class='span6'>
+        <div class='col-md-6'>
             <!-- Classement de l'établissement -->
             <h4 class='h4_subtitle'>Classement</h4>
             <dl class='dl-horizontal'>
@@ -266,7 +266,7 @@
         </div>
 
         <!-- Carte de l'emplacement de l'établissement / informations  -->
-        <div class='span6'>
+        <div class='col-md-6'>
             <!-- Cartes et diaporama -->
             <ul id='menu_nav' class="nav nav-tabs" style="margin: 0; padding: 0; border-bottom: none;">
                 <?php if (count($this->etablissement['diapo_plans']) > 0) : ?>
