--- a/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
+++ b/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
@@ -1,10 +1,10 @@
 <div class="row titles">
-    <div class="span4">
+    <div class="col-md-4">
         <h3><?= $this->titleInfo ?? 'Informations sur le champ' ?></h3>
     </div>
 
     <?php if ($this->count !== 0): ?>
-        <div class="span6 offset2">
+        <div class="col-md-6 offset2">
             <h3><?= $this->titleList ?? 'Liste des champs' ?></h3>
         </div>
     <?php endif ?>
