--- a/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
+++ b/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
@@ -1,9 +1,9 @@
 <?php if (!is_array($this->champFusionValue)): ?>
-    <div class="span12 alert alert-info">
+    <div class="col-md-12 alert alert-info">
         Nom du champ de fusion : {<?= $this->champFusionValue ?>}
     </div>
 <?php else : ?>
-    <div class="span12 alert alert-info">
+    <div class="col-md-12 alert alert-info">
         Champs de fusion :
         <table class="table table-bordered table-condensed champFusionTable">
             <tr>
