--- a/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
@@ -1,10 +1,10 @@
 <?php
 	echo "
 		<div class='row'>
-			<div class='span9' >
+			<div class='col-md-9' >
 				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> Gestion des rappels réglementaires
 			</div>
-			<div class='span3' style='float:right;'>
+			<div class='col-md-3' style='float:right;'>
 				
 			</div>
 		</div>
@@ -12,7 +12,7 @@
 			Gestion des rappels réglementaires
 		</h3>
 		<div class='row'>
-			<div class='span12' style='text-align:right;'>
+			<div class='col-md-12' style='text-align:right;'>
 				<a class='btn btn-default' href='/gestion-prescriptions/gestion-rappel-reg-add'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter une prescription</a>
 			</div>
 		</div>
@@ -46,19 +46,19 @@
 					$texte = $listePrescr[$i][$j]['LIBELLE_TEXTE'];
 					echo "
 						<tr>
-							<td class='span2'>".$texte."</td>
-							<td class='span2'>".$article."</td>
+							<td class='col-md-2'>".$texte."</td>
+							<td class='col-md-2'>".$article."</td>
 					";
 					if($cpt)
 					{
 						echo "
-							<td rowspan='".$nbAssoc."' class='span6'>
+							<td rowspan='".$nbAssoc."' class='col-md-6'>
 								".nl2br($listePrescr[$i][0]['PRESCRIPTIONREGL_LIBELLE'])."
 							</td>
-							<td rowspan='".$nbAssoc."' class='span1 numPresc' >
+							<td rowspan='".$nbAssoc."' class='col-md-1 numPresc' >
 								".( ($listePrescr[$i][0]['PRESCRIPTIONREGL_VISIBLE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
 							</td>
-							<td class='span1' rowspan='".$nbAssoc."'>
+							<td class='col-md-1' rowspan='".$nbAssoc."'>
 								<a class='btn' href='/gestion-prescriptions/gestion-rappel-reg-edit/id/".$listePrescr[$i][$j]['ID_PRESCRIPTIONREGL']."' >Modifier</a>
 							</td>
 						";
