--- a/application/views/scripts/gestion-textes-applicables/formtexteappl.phtml
+++ b/application/views/scripts/gestion-textes-applicables/formtexteappl.phtml
@@ -25,13 +25,13 @@ echo "
 		<br/><br/>
 		Rendre ce texte disponible pour les prescriptions
 		<div class='row'>
-			<div class='span2'>
+			<div class='col-md-2'>
 				<input type='radio' name='defPrescription' value='yes' />&nbsp;Oui
 			</div>
-			<div class='span2'>
+			<div class='col-md-2'>
 				<input type='radio' name='defPrescription' value='no' checked />Non
 			</div>
-			<div class='span8'></div>
+			<div class='col-md-8'></div>
 		</div>
 	</form>
 ";
