--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -16,7 +16,7 @@ foreach($this->listeTextesAppl as $val => $ue){
 		}
 		echo "
 			<div class='row'>
-			<div class='span12' style='font-weight:bold;font-size:25px;' >".$ue['LIBELLE_TYPETEXTEAPPL']."</div>
+			<div class='col-md-12' style='font-weight:bold;font-size:25px;' >".$ue['LIBELLE_TYPETEXTEAPPL']."</div>
 			</div>
 		";
 		$idTypeMarq = $idType;
@@ -25,9 +25,9 @@ foreach($this->listeTextesAppl as $val => $ue){
 	}
 	echo "
 		<li class='row' style='margin-top:15px;margin-bottom:10px;' id='".$ue['ID_TEXTESAPPL']."'>
-			<div class='span10'>".nl2br($ue['LIBELLE_TEXTESAPPL'])."</div>
-			<div class='span1'><button class='editTexteAppl btn' id='".$ue['ID_TEXTESAPPL']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Editer</button></div>
-			<div class='span1'>".( ($ue['VISIBLE_TEXTESAPPL'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."</div>
+			<div class='col-md-10'>".nl2br($ue['LIBELLE_TEXTESAPPL'])."</div>
+			<div class='col-md-1'><button class='editTexteAppl btn' id='".$ue['ID_TEXTESAPPL']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Editer</button></div>
+			<div class='col-md-1'>".( ($ue['VISIBLE_TEXTESAPPL'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."</div>
 		</li>
 	";
 }
