--- a/application/views/scripts/piece-jointe/export.phtml
+++ b/application/views/scripts/piece-jointe/export.phtml
@@ -1,15 +1,15 @@
 <li id="PIECESJOINTES" class="row" style="margin-bottom: 20px;" tabindex="0">
-    <div class="span3 pull-left">
+    <div class="col-md-3 pull-left">
         <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
         Liste des pièces jointes pouvant être envoyées vers Plat'AU
     </div>
-    <div class="span9">
+    <div class="col-md-9">
         <?php foreach ($this->piecesJointes as $pieceJointe): ?>
             <div class="row">
-                <div class="span10">
+                <div class="col-md-10">
                     <?= $pieceJointe['NOM_PIECEJOINTE'].$pieceJointe['EXTENSION_PIECEJOINTE'] ?>
                 </div>
-                <div class="span2">
+                <div class="col-md-2">
                     <input type="checkbox" name="export-pj-platau[<?= $pieceJointe['ID_PIECEJOINTE'] ?>]" />
                 </div>
             </div>
