--- a/application/views/scripts/search/dossier.phtml
+++ b/application/views/scripts/search/dossier.phtml
@@ -34,7 +34,7 @@
 <!-- Onglets permettant de selectionner les entités à rechercher -->
 <h2 class="page-header">Dossiers</h2>
 <form method='get' class='row'>
-    <div class='navbar-form form-search well well-small span12' style='margin-bottom: 5px;'>
+    <div class='navbar-form form-search well well-small col-md-12' style='margin-bottom: 5px;'>
         <div class="pull-left input-append">
             <input type="text" name='objet' class="input-xlarge search-query" placeholder="Objet du dossier ..." value="<?php if(isset($_GET["objet"])) echo htmlentities($_GET["objet"]) ?>" onkeypress="masquerBoutonExportCalc()"/>
                 <input type='submit' class="btn" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()" />
@@ -50,15 +50,15 @@
         </div>
     </div>
 
-    <div id='filterContainer' class='well span12' style="margin-left: 0;">
+    <div id='filterContainer' class='well col-md-12' style="margin-left: 0;">
         <div class='row'>
             <div>
-                <select name='types[]' class="span3 chosen" data-placeholder='Types' multiple onchange="masquerBoutonExportCalc()">
+                <select name='types[]' class="col-md-3 chosen" data-placeholder='Types' multiple onchange="masquerBoutonExportCalc()">
                     <?php foreach ($this->DB_type as $type): ?>
                         <option value='<?php echo $type["ID_DOSSIERTYPE"] ?>' <?php if(isset($_GET["types"]) && in_array($type["ID_DOSSIERTYPE"], (array) $_GET["types"])) echo 'selected' ?>><?php echo $type["LIBELLE_DOSSIERTYPE"] ?></option>
                     <?php endforeach ?>
                 </select>
-                <select name='commissions[]' class="span3 chosen" data-placeholder='Commissions' multiple onchange="masquerBoutonExportCalc()">
+                <select name='commissions[]' class="col-md-3 chosen" data-placeholder='Commissions' multiple onchange="masquerBoutonExportCalc()">
                     <?php
                         foreach($this->array_commissions as $array_commission){
                             echo "<optgroup label='".htmlspecialchars($array_commission["LIBELLE"], ENT_QUOTES)."' >";
@@ -72,7 +72,7 @@
 
                     ?>
                 </select>
-                <select name='groupements_territoriaux[]' class="span3 chosen" data-placeholder='Groupements territoriaux' multiple onchange="masquerBoutonExportCalc()">
+                <select name='groupements_territoriaux[]' class="col-md-3 chosen" data-placeholder='Groupements territoriaux' multiple onchange="masquerBoutonExportCalc()">
                     <?php foreach ($this->DB_groupementterritorial as $groupement): ?>
                         <?php $selected = false; ?>
                         <?php if ($this->user['groupements'] != null): ?>
@@ -88,7 +88,7 @@
                         </option>
                     <?php endforeach ?>
                 </select>
-                <select name='avisCommission[]' class="span3 chosen" data-placeholder='Avis de la commission' multiple onchange="masquerBoutonExportCalc()">
+                <select name='avisCommission[]' class="col-md-3 chosen" data-placeholder='Avis de la commission' multiple onchange="masquerBoutonExportCalc()">
                     <option value='1' <?php if(isset($_GET["avisCommission"]) && in_array(1, (array) $_GET["avisCommission"])) echo 'selected' ?>>Favorable</option>
                     <option value='2' <?php if(isset($_GET["avisCommission"]) && in_array(2, (array) $_GET["avisCommission"])) echo 'selected' ?>>Défavorable</option>
                 </select>
@@ -96,12 +96,12 @@
 
             <!-- On met une div pour ne pas coller les select de la 1ère ligne avec ceux de la seconde ligne -->
             <div style="margin-top: 4px;">
-                <select name='avisRapporteur[]' class="span3 chosen" data-placeholder='Avis du rapporteur' multiple onchange="masquerBoutonExportCalc()">
+                <select name='avisRapporteur[]' class="col-md-3 chosen" data-placeholder='Avis du rapporteur' multiple onchange="masquerBoutonExportCalc()">
                     <option value='1' <?php if(isset($_GET["avisRapporteur"]) && in_array(1, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Favorable</option>
                     <option value='2' <?php if(isset($_GET["avisRapporteur"]) && in_array(2, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Défavorable</option>
                 </select>
                 <?php if (!filter_var(getenv('PREVARISC_DEACTIVATE_PLATAU'), FILTER_VALIDATE_BOOLEAN)): ?>
-                    <select name='provenance' class="span3 chosen" data-placeholder='Provenance' multiple onchange="masquerBoutonExportCalc()">
+                    <select name='provenance' class="col-md-3 chosen" data-placeholder='Provenance' multiple onchange="masquerBoutonExportCalc()">
                         <option value='1' <?= isset($_GET["provenance"]) && in_array(1, (array) $_GET["provenance"]) ? 'selected': '' ?> >Provenant de PLATAU</option>
                         <option value='2' <?= isset($_GET["provenance"]) && in_array(2, (array) $_GET["provenance"]) ? 'selected': '' ?> >Ne provenant pas de PLATAU</option>
                     </select>
@@ -109,10 +109,10 @@
             </div>
         </div>
         <div class='row mt-5'>
-            <div class='span7'>
+            <div class='col-md-7'>
                 <div class='row'>
-                    <div class='span6'>
-                        <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune' onchange="masquerBoutonExportCalc()">
+                    <div class='col-md-6'>
+                        <select name='commune' class="col-md-12 chosen" data-placeholder='Sélectionner une commune' onchange="masquerBoutonExportCalc()">
                             <option value=''></option>
                         <?php foreach ($this->array_communes as $commune): ?>
                             <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
@@ -120,8 +120,8 @@
                         </select>
                     </div>
 
-                    <div class='span6'>
-                        <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie' onchange="masquerBoutonExportCalc()">
+                    <div class='col-md-6'>
+                        <select name='voie' class="col-md-12 chosen" data-placeholder='Sélectionner une voie' onchange="masquerBoutonExportCalc()">
                             <option value=''></option>
                             <?php foreach ($this->array_voies as $voie): ?>
                                 <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
@@ -130,8 +130,8 @@
                     </div>
                 </div>
                 <div class='row'>
-                    <div class='span6'>
-                        <select name='numero' class="span12 chosen" data-placeholder='Sélectionner un numéro' onchange="masquerBoutonExportCalc()">
+                    <div class='col-md-6'>
+                        <select name='numero' class="col-md-12 chosen" data-placeholder='Sélectionner un numéro' onchange="masquerBoutonExportCalc()">
                             <option value=''></option>
                             <?php foreach ($this->array_numeros as $numero): ?>
                                 <option value='<?= $numero["NUMERO_ADRESSE"] ?>' <?php if (isset($_GET["numero"]) && $numero["NUMERO_ADRESSE"] === $_GET["numero"]) echo 'selected' ?>><?= $numero["NUMERO_ADRESSE"] ?></option>
@@ -140,8 +140,8 @@
                     </div>
                 </div>
                 <div class='row mt-3'>
-                    <div class="span6">
-                        <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionner un préventionniste' onchange="masquerBoutonExportCalc()">
+                    <div class="col-md-6">
+                        <select name="preventionniste" class='col-md-12 chosen' data-placeholder='Sélectionner un préventionniste' onchange="masquerBoutonExportCalc()">
                             <option value=''></option>
                             <?php foreach ($this->liste_prev as $prev): ?>
                                 <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
@@ -150,43 +150,43 @@
                     </div>
                 </div>
                 <div class='row mt-4'>
-                    <div class='span6'>
-                        <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" onkeypress="masquerBoutonExportCalc()" />
+                    <div class='col-md-6'>
+                        <input type="text" name='permis' class='col-md-12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" onkeypress="masquerBoutonExportCalc()" />
                     </div>
                 </div>
             </div>
-            <div class='span5'>
+            <div class='col-md-5'>
                 <div class='row'>
-                    <div class='span2'>Création</div>
-                    <div class='span1'>du</div>
-                    <div class='span3'>
-                        <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
+                    <div class='col-md-2'>Création</div>
+                    <div class='col-md-1'>du</div>
+                    <div class='col-md-3'>
+                        <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
                     </div>
-                    <div class='span1'>au</div>
-                    <div class="span3">
-                        <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
+                    <div class='col-md-1'>au</div>
+                    <div class="col-md-3">
+                        <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
                     </div>
                 </div>
                 <div class='row'>
-                    <div class='span2'>Réception</div>
-                    <div class='span1'>du</div>
-                    <div class="span3">
-                        <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    <div class='col-md-2'>Réception</div>
+                    <div class='col-md-1'>du</div>
+                    <div class="col-md-3">
+                        <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                     </div>
-                    <div class='span1'>au</div>
-                    <div class="span3">
-                        <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    <div class='col-md-1'>au</div>
+                    <div class="col-md-3">
+                        <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                     </div>
                 </div>
                 <div class='row'>
-                    <div class='span2'>Réponse</div>
-                    <div class='span1'>du</div>
-                    <div class="span3">
-                        <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    <div class='col-md-2'>Réponse</div>
+                    <div class='col-md-1'>du</div>
+                    <div class="col-md-3">
+                        <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                     </div>
-                    <div class='span1'>au</div>
-                    <div class="span3">
-                        <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    <div class='col-md-1'>au</div>
+                    <div class="col-md-3">
+                        <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker col-md-12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
                     </div>
                 </div>
             </div>
