--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -33,7 +33,7 @@
 	    </p>
 	</div>
 
-    <div id="filterContainer" class="well span12" style="margin-left: 0;">
+    <div id="filterContainer" class="well col-md-12" style="margin-left: 0;">
         <div class="row">
             <div>
                 <select name='statuts[]' multiple onchange="masquerBoutonExportCalc()">
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <div class="span12"></div>
+        <div class="col-md-12"></div>
 
         <div class="row">
             <select name="preventionniste" class='chosen' data-placeholder='Sélectionnez un préventionniste' onchange="masquerBoutonExportCalc()">
