--- a/application/views/scripts/couches-cartographiques/list.phtml
+++ b/application/views/scripts/couches-cartographiques/list.phtml
@@ -128,7 +128,7 @@
         <a class='btn' href='<?php echo $this->url(array('controller' => 'couches-cartographiques', 'action' => 'change-order'), null, true) ?>'>Changer l'ordre des couches</a>
     </p>
 
-    <div class="alert pull-right span4">
+    <div class="alert pull-right col-md-4">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>Attention !</strong> Le chargement de la page d'ajout d'une couche IGN peut prendre du temps si vous avez renseigné plusieurs clés.
     </div>
