--- a/application/views/scripts/dossier/rapport.phtml
+++ b/application/views/scripts/dossier/rapport.phtml
@@ -5,10 +5,10 @@
         <h4>Informations sur le dossier</h4>
     </div>
     <div class='row'>
-        <div class='span2'>
+        <div class='col-md-2'>
             Commission concernée
         </div>
-        <div class='span10'>
+        <div class='col-md-10'>
             <?php
                 $idCommissionDossier = $this->infosCommission['ID_COMMISSION'];
                 if(!isset($idCommissionDossier))
@@ -49,10 +49,10 @@
         <h4>Fichiers de la commission</h4>
     </div>
     <div class='row'>
-        <div class='span2'>
+        <div class='col-md-2'>
             Choisissez un document
         </div>
-        <div class='span10'>
+        <div class='col-md-10'>
         <?php
             echo "
                     <table id='file_0' class='table table-bordered' style='".( (!isset($idCommissionDossier) || $this->locked == 1 )? "" : "display:none" ).";'>
