--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -1,15 +1,15 @@
-<div class="span5 cardAvisDerogations">
+<div class="col-md-5 cardAvisDerogations">
     <a href="#" class="close pull-right" data-dismiss="alert" data-id='<?= $this->ID_DOSSIER."/avis-derogation/".$this->ID_AVIS_DEROGATION ?>'>&times;</a>
 
     <h1 class='text-center'><?= $this->TITRE ?></h1>
 
     <div class="row">
-        <div class="span6">
+        <div class="col-md-6">
             <p>Type : <?= $this->TYPE ?></p>
             <p>Objet : <?= $this->OBJET ?>
             <p>Avis : <?= $this->LIBELLE_AVIS ?></p>
         </div>
-        <div class="span6">
+        <div class="col-md-6">
             <p>Avis/Dérogation levé(e):
                 <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'index', 'id' => $this->ID_DOSSIER_LIE], false, true) ?>">
                     <?php if ($this->ID_DOSSIER_LIE):
