--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -19,7 +19,7 @@
     <div class='row'>
 
         <!-- Informations générales de l'établissement -->
-        <div class='span6'>
+        <div class='col-md-6'>
             <h4 class='h4_subtitle'>Général</h4>
             <div>
                 <input style='width: 100%; box-sizing: border-box; height: 2.5em;' type='text' placeholder="Libellé de l'établissement" name='LIBELLE_ETABLISSEMENTINFORMATIONS' value='<?php if ($this->etablissement['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"]) {
@@ -374,7 +374,7 @@
         </div>
 
         <!-- Carte de l'emplacement de l'établissement / informations  -->
-        <div class='span6'>
+        <div class='col-md-6'>
             <h4 class="champ_adresse champs h4_subtitle">Adresse <a style='font-size: 0.85em; float: right; font-weight: normal;' data-toggle="modal" data-backdrop="static" href="#adresse-modal-ajout">Ajouter une adresse</a></h4>
             <table id='adresses' class='table table-condensed champ_adresse champs'>
                 <thead>
