--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -9,17 +9,17 @@
 </a>
 
 <div class="row">
-    <div class="span4">
+    <div class="col-md-4">
         <h3>Informations sur la rubrique</h3>
     </div>
 
-    <div class="span6 offset2">
+    <div class="col-md-6 offset2">
         <h3>Informations sur le champ</h3>
     </div>
 </div>
 
 <div id="edit-champ" class="row">
-    <div class="span4 infos-rubrique">
+    <div class="col-md-4 infos-rubrique">
         <h3>
             <?= $this->rubrique['NOM'] ?>
             <?php if($this->rubrique['DEFAULT_DISPLAY']): ?>
@@ -33,7 +33,7 @@
         <?php endif ?>
     </div>
 
-    <div class="span6 offset2 infos-champ">
+    <div class="col-md-6 offset2 infos-champ">
         <?php if (null !== $this->champFusionValue && !is_array($this->champFusionValue)): ?>
             <?= $this->partial(
                 'formulaire/partials/partial-champ-nom-fusion.phtml',
@@ -43,7 +43,7 @@
             ) ?>
         <?php endif ?>
 
-        <form action class="span12 form-inline" method="post">
+        <form action class="col-md-12 form-inline" method="post">
             <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
             <div>
                 <label for="nom_champ">Nom du champ</label>
@@ -86,7 +86,7 @@
                             <a href='#' id='add-list-value'>Ajouter une valeur</a>
                         </div>
                         <div class="row">
-                            <div id="list-value" class="span10">
+                            <div id="list-value" class="col-md-10">
                             </div>
                         </div>
                     </div>
@@ -111,7 +111,7 @@ endif ?>
 
 <div class="row">
     <?php if ($this->type === 'Parent') : ?>
-        <div class="span4 infos-champ">
+        <div class="col-md-4 infos-champ">
             <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
                 <div>
                     <?= $this->formChamp->nom_champ_enfant ?>
@@ -128,7 +128,7 @@ endif ?>
                         <a href='#' id='add-list-value'>Ajouter une valeur</a>
                     </div>
                     <div class="row">
-                        <div id="list-value" class="span10">
+                        <div id="list-value" class="col-md-10">
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@ endif ?>
         </div>
     <?php endif ?>
 
-    <div id="saved-fields" class="span6 offset2">
+    <div id="saved-fields" class="col-md-6 offset2">
         <?php if(count($this->listChamp) > 0): ?>
             <?php if (null !== $this->champFusionValue && is_array($this->champFusionValue)): ?>
                 <?= $this->partial(
