--- a/application/views/scripts/gestion-prescriptions/formprescription.phtml
+++ b/application/views/scripts/gestion-prescriptions/formprescription.phtml
@@ -18,7 +18,7 @@ echo "
 ";
 echo "
 	<div>
-		<div class='span4'>
+		<div class='col-md-4'>
 			Texte&nbsp;
 			<select style='width:80%;' id='LIBELLE_TEXTE' class='chosen'>
 ";
@@ -28,7 +28,7 @@ echo "
 echo "
 			</select>
 		</div>
-		<div class='span4'>
+		<div class='col-md-4'>
 			Article&nbsp;
 			<select style='width:80%;' id='LIBELLE_ARTICLE' class='chosen'>
 ";
@@ -38,7 +38,7 @@ echo "
 echo "
 			</select>
 		</div>
-		<div class='span4'>
+		<div class='col-md-4'>
 			<a class='btn btn-default' id='addAssoc' href=''>Ajouter l'association</a>
 		</div>
 	</div>
