--- a/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
@@ -2,10 +2,10 @@
 
 	echo "
 		<div class='row'>
-			<div class='span9' >
+			<div class='col-md-9' >
 				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> Gestion des articles
 			</div>
-			<div class='span3' style='float:right;'>
+			<div class='col-md-3' style='float:right;'>
 				
 			</div>
 		</div>
@@ -13,7 +13,7 @@
 			Gestion des articles
 		</h3>
 		<div class='row'>
-			<div class='span12' style='text-align:right;'>
+			<div class='col-md-12' style='text-align:right;'>
 				<a class='btn btn-default' href='/gestion-prescriptions/gestion-articles-add'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter un article</a>
 			</div>
 		</div>
@@ -28,11 +28,11 @@
 		{
 			echo "
 				<div class='row' >
-					<div class='span2' style='text-align:right;'>
+					<div class='col-md-2' style='text-align:right;'>
 						".( ($article['VISIBLE_ARTICLE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
 						<a class='btn' href='/gestion-prescriptions/gestion-articles-edit/id/".$article['ID_ARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
 					</div>
-					<div class='span10' >".$article['LIBELLE_ARTICLE']."</div>					
+					<div class='col-md-10' >".$article['LIBELLE_ARTICLE']."</div>					
 				</div>
 				<br/>
 			";
