--- a/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
+++ b/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
@@ -10,17 +10,17 @@
 	foreach($this->prescriptionType as $presc){
 		echo "
 			<tr >
-				<td class='span3' style='vertical-align:top;'>".$presc['LIBELLE_TEXTE']."</td>
-				<td class='span3' style='vertical-align:top;'>".$presc['LIBELLE_ARTICLE']."</td>
+				<td class='col-md-3' style='vertical-align:top;'>".$presc['LIBELLE_TEXTE']."</td>
+				<td class='col-md-3' style='vertical-align:top;'>".$presc['LIBELLE_ARTICLE']."</td>
 		";
 		if($cpt)
 		{
 			echo "
-				<td rowspan='".$nbAssoc."' class='span5'>
+				<td rowspan='".$nbAssoc."' class='col-md-5'>
 					<input type='hidden' name='prescType[]' value='".$presc['ID_PRESCRIPTIONTYPE']."' />
 					".nl2br($presc['PRESCRIPTIONTYPE_LIBELLE'])."
 				</td>";
-			echo "<td rowspan='".$nbAssoc."' class='span1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
+			echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
 			$cpt = false;
 		}
 		echo "
