--- a/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
@@ -50,17 +50,17 @@
 				$texte = $this->prescriptionType[$i][$j]['LIBELLE_TEXTE'];
 				echo "
 					<tr>
-						<td class='span3' style='vertical-align:top;'>".$texte."</td>
-						<td class='span3' style='vertical-align:top;'>".$article."</td>
+						<td class='col-md-3' style='vertical-align:top;'>".$texte."</td>
+						<td class='col-md-3' style='vertical-align:top;'>".$article."</td>
 				";
 				if($cpt)
 				{
 					echo "
-						<td rowspan='".$nbAssoc."' class='span5'>
+						<td rowspan='".$nbAssoc."' class='col-md-5'>
 							<input type='hidden' name='prescType[]' value='".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."' />
 							".nl2br($this->prescriptionType[$i][0]['PRESCRIPTIONTYPE_LIBELLE'])."
 						</td>";
-					echo "<td rowspan='".$nbAssoc."' class='span1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
+					echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn' data-toggle='modal'>Editer</a></td>";
 					$cpt = false;
 				}
 				echo "
