--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -10,7 +10,7 @@
 
         <div class='container-fluid'>
             <div class='row'>
-                <div class='col-md-2 sidebar mainsidebar' style="margin-left: -20px; padding-left: 20px; margin-top: 20px; padding-top: 40px;">
+                <div class='col-md-2 sidebar mainsidebar' style="margin-top: 20px; padding-top: 40px;">
                     <br>
                     <?php echo $this->avatar(Zend_Auth::getInstance()->getIdentity()['ID_UTILISATEUR'], 'medium', array('style' => "float: left; width: 50px; border: 1px solid #dfdfdf; border-radius: 50%; margin-right: 15px;")) ?>
 
